--- a/style.css
+++ b/style.css
@@ -1182,13 +1182,16 @@ body {
 .product {
   display: flex;
   flex-wrap: wrap;
-  position: relative; }
+  position: relative;
+  justify-content: space-between; }
 
-.product-images {
-  flex: 0 50%; }
-
+.product-images,
 .product-summary {
-  flex: 1 500px; }
+  flex-grow: 1; }
+  @media screen and (min-width: 800px) {
+    .product-images,
+    .product-summary {
+      flex: 0 1 49%; } }
 
 .product-thumbnails {
   margin-top: 10px; }
